# pypi-offgrid

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  start_dev_server.ps1  start_dev_server.sh
app/: __init__.py  application_conf.py  cached_files.py  config_file.py  db_sqlite.py  logger.py  pypi-offgrid.py  remote_simple_index.py
app/templates/: _footer.html  _navbar.html  cache_status_delete.html  cache_status_files.html  cache_status_index.html  cache_status_info.html  index.html  settings.html  simple_index.html  simple_package.html
