[metadata]
name = pypi-offgrid
version = 1.6.29
author = La Société des Berouques
author_email = berouque@outlook.com
description = caching proxy server for pypi.org
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/berouques/pypi-offgrid

classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
packages = find:
include_package_data = True
install_requires =
    beautifulsoup4==4.12.3
    blinker==1.7.0
    certifi==2024.2.2
    charset-normalizer==3.3.2
    click==8.1.7
    colorama==0.4.6
    coloredlogs==15.0.1
    Flask==3.0.3
    humanfriendly==10.0
    idna==3.7
    itsdangerous==2.2.0
    Jinja2==3.1.3
    MarkupSafe==2.1.5
    psutil==5.9.8
    pyreadline3==3.4.1
    python-dotenv==1.0.1
    requests==2.31.0
    soupsieve==2.5
    toml==0.10.2
    urllib3==2.2.1
    Werkzeug==3.0.2

[options.packages.find]
where = app
exclude =
    tests*
    testing*

[options.package_data]
pypi-offgrid = templates/*.html